# cehrbert

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  db_properties.ini  full_grid_search_config.ini  pyproject.toml  requirements.txt  setup.py  simple_grid_search_config.ini  validation.py
.github/workflows/: pylint.yml  python-app.yml  python-build.yml  tests.yml
analyses/gpt/: compare_conditional_probability.py  compare_cooccurrence.py  cooccurrence_visualization.py  generate_conditional_probability.py  generate_cooccurrence.py  model_overfitting_analysis.py
config/: grid_search_config.py  model_configs.py  parameters.py  parse_args.py
const/: common.py
data_generators/: data_classes.py  data_generator.py  data_generator_base.py  gpt_learning_objectives.py  gpt_utils.py  learning_objective.py  probabilistic_learning_objective.py  tokenizer.py
data_generators/hf_data_generator/: hf_cehrgpt_dataset.py  hf_cehrgpt_dataset_collator.py  (+4 more)
deepspeed_configs/: zero1.json  zero2.json  zero3.json
evaluations/: evaluation.py  evaluation_parameters.py  evaluation_parse_args.py  hospitalization_baseline.py  hospitalization_dp.py  hospitalization_prediction-new-data-generator.py  model_evaluators.py  transfer_learning_evaluation.py
keras_transformer/: bert.py  extras.py
med_extension/: schema_extension.py
models/: bert_models.py  bert_models_visit_prediction.py  custom_layers.py  evaluation_models.py  gpt_model.py  hierachical_bert_experiment.py  hierachical_bert_model.py  hierachical_bert_model_v2.py  hierachical_lstm_model.py  hierachical_phenotype_model.py  hierachical_phenotype_model_new.py  loss_schedulers.py  model_parameters.py  parse_args.py  probabilistic_cehrbert.py  time_attention_models.py
runner/: hf_cehrbert_finetune_runner.py  hf_cehrbert_finetune_runner_config.yaml  hf_cehrbert_pretrain_runner.py  hf_cehrbert_pretrain_runner_config.yaml  hf_cehrbert_runner.py  hf_cehrbert_runner_config.yaml  hf_cehrbert_runniner_config.yaml  hf_runner_argument_dataclass.py  runner_util.py
sample_configs/: hf_cehrbert_finetuning_runner_config.yaml  hf_cehrbert_pretrain_runner_config.yaml  hf_cehrbert_pretrain_runner_meds_config.yaml  hf_cehrgpt_pretrain_runner_config.yaml
sample_data/: hf_readmission
spark_apps/: README.md  covid_ventilation.py  generate_concept_similarity_table.py  generate_hierarchical_bert_training_data.py  generate_included_concept_list.py  generate_information_content.py  generate_required_labs.py  generate_training_data.py  heart_failure.py  hospitalization.py  mortality.py  parameters.py  spark_app_base.py  spark_parse_args.py  sql_templates.py  type_two_diabietes.py
tools/: convert_med_extension_to_med.py  convert_sequence_to_omop.py  download_omop_tables.py  generate_batch_gpt_sequence.py  generate_batch_hf_gpt_sequence.py  generate_gpt_sequence.py  omop_converter.py  omop_converter_batch.py  omop_converter_sequence.py  omop_entity.py  time_sensitive_prediction.py  upload_omop_tables.py
trainers/: model_trainer.py  train.py  train_bert_only.py  train_bert_with_pretrained_timeattention.py  train_cehr_bert.py  train_cehr_gpt.py  train_gpt.py  train_hierarchical_bert.py  train_hierarchical_bert_only.py  train_probabilistic_bert.py  train_probabilistic_phenotype.py  train_time_aware_embeddings.py
utils/: checkpoint_utils.py  common.py  logging_utils.py  model_utils.py  spark_utils.py  utils.py
(+291 files in other folders)
