[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cehrbert"
dynamic = ["version"]
authors = [
    { name = "Chao Pang", email = "chaopang229@gmail.com" },
    { name = "Xinzhuo Jiang", email = "xj2193@cumc.columbia.edu" },
    { name = "Krishna Kalluri", email = "kk3326@cumc.columbia.edu" },
    { name = "Nishanth Parameshwar Pavinkurve", email = "np2689@cumc.columbia.edu" },
    { name = "Karthik Natarajan", email = "kn2174@cumc.columbia.edu" }
]
description = "CEHR-BERT: Incorporating temporal information from structured EHR data to improve prediction tasks"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "dask==2024.1.1",
    "dask[dataframe]==2024.1.1",
    "datasets==2.16.1",
    "evaluate==0.4.1",
    "fast-ml==3.68",
    "femr==0.2.0",
    "Jinja2==3.1.3",
    "meds==0.3.3",
    "meds_reader==0.1.9",
    "networkx==3.2.1",
    "numpy==1.24.3",
    "packaging==23.2",
    "pandas==2.2.0",
    "peft==0.10.0",
    "Pillow==10.3.0",
    "pyarrow==15.0.0",
    "pydantic==2.6.0",
    "python-dateutil==2.8.2",
    "PyYAML==6.0.1",
    "scikit-learn==1.4.0",
    "scipy==1.12.0",
    "tensorflow==2.15.0",
    "tensorflow-metal==1.1.0; sys_platform == 'darwin'", # macOS only
    "tensorflow-datasets==4.5.2",
    "tqdm==4.66.1",
    "torch==2.4.0",
    "tokenizers==0.19.0",
    "transformers==4.40.0",
    "accelerate==0.31.0",
    "Werkzeug==3.0.1",
    "wandb==0.17.8",
    "xgboost==2.0.3",
    "cehrbert_data==0.0.5"
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/cumc-dbmi/cehr-bert"

[project.scripts]
cehrbert-pretraining = "cehrbert.runners.hf_cehrbert_pretrain_runner:main"
cehrbert-finetuning = "cehrbert.runners.hf_cehrbert_finetuning_runner:main"

[project.optional-dependencies]
dev = [
    "pre-commit", "pytest", "pytest-cov", "pytest-subtests", "rootutils", "hypothesis", "black"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
